Add telemetry samples and docs

--- a/docsource/tutorials/toc.yml
+++ b/docsource/tutorials/toc.yml
@@ -8,6 +8,8 @@
   href: logos.md
 - name: Status Check
   href: status_check.md
+- name: Telemetry
+  href: telemetry.md
 - name: Library Logging
   href: logging.md    
 - name: Library Customization
