Change library to netstandard 2.0
This supports the framework shown in this matrix:
https://docs.microsoft.com/en-us/dotnet/standard/net-standard#net-implementation-support

Update project layout to support runtimes/rid pattern

There are conflicting nuget docs but basically this folder layout
with the runtimes/{rid}/native structure *should* make nuget happy.
Initial testing shows that the dlls are correctly picked up and packed
into the nuget. The remaining task is how to get the correct version
copied back to the consumers output directory.

Create the targets file and reference in main csproj. Key notes:
* targets file name must match library name (e.g. PTIRelianceLib)
* targets file must be in build/{framework} directory relative to csproj
* runtimes is the way to go, not the lib structure

Explicitly state c calling convection in NativeMethods.cs to resolve the
"unbalanced stack" exception found on x86 builds

CI was using the same build directory and the nupkg source, this conflicts
with new build target setup. Switch CI to use dist instead.

Fix CI test runner: Test projet is not properly deserializing binary assets, try
embedding them instead. Tests still run and pass locally. Force include binary
assets in tests project and refactor tests to manually load test resources from
assembly instead of disk.

CI build is fixed, update the version to 1.0 to match nuget

--- a/PTIRelianceLib.Tests/PTIRelianceLib.Tests.csproj
+++ b/PTIRelianceLib.Tests/PTIRelianceLib.Tests.csproj
@@ -9,10 +9,40 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\black_bitmap.bmp" />
+    <None Remove="Resources\blue_bitmap.bmp" />
+    <None Remove="Resources\gray_atkinson.bmp" />
+    <None Remove="Resources\gray_bitmap.bmp" />
+    <None Remove="Resources\gray_burkes.bmp" />
+    <None Remove="Resources\gray_floydsteinbergs.bmp" />
+    <None Remove="Resources\gray_floydsteinbergsfalse.bmp" />
+    <None Remove="Resources\gray_jjn.bmp" />
+    <None Remove="Resources\gray_sierra.bmp" />
+    <None Remove="Resources\gray_sierra2.bmp" />
+    <None Remove="Resources\gray_sierralite.bmp" />
+    <None Remove="Resources\gray_stucki.bmp" />
+    <None Remove="Resources\green_bitmap.bmp" />
+    <None Remove="Resources\red_bitmap.bmp" />
+    <None Remove="Resources\telemetry.v3.bin" />
     <None Remove="Resources\white_bitmap.bmp" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\black_bitmap.bmp" />
+    <EmbeddedResource Include="Resources\blue_bitmap.bmp" />
+    <EmbeddedResource Include="Resources\gray_atkinson.bmp" />
+    <EmbeddedResource Include="Resources\gray_bitmap.bmp" />
+    <EmbeddedResource Include="Resources\gray_burkes.bmp" />
+    <EmbeddedResource Include="Resources\gray_floydsteinbergs.bmp" />
+    <EmbeddedResource Include="Resources\gray_floydsteinbergsfalse.bmp" />
+    <EmbeddedResource Include="Resources\gray_jjn.bmp" />
+    <EmbeddedResource Include="Resources\gray_sierra.bmp" />
+    <EmbeddedResource Include="Resources\gray_sierra2.bmp" />
+    <EmbeddedResource Include="Resources\gray_sierralite.bmp" />
+    <EmbeddedResource Include="Resources\gray_stucki.bmp" />
+    <EmbeddedResource Include="Resources\green_bitmap.bmp" />
+    <EmbeddedResource Include="Resources\red_bitmap.bmp" />
+    <EmbeddedResource Include="Resources\telemetry.v3.bin" />
     <EmbeddedResource Include="Resources\white_bitmap.bmp">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
