--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: 0.3.{build}
+version: 1.0.{build}
 environment:
   access_token:
     secure: 4L8MS6vjIHzShfn4kfiesuBNu9Ojv6Vl4TtQFt0JZGaiMloLkHq86xzONq29mzkN
@@ -28,8 +28,8 @@ build_script:
 test_script:
 - ps: .\tools\run_tests.ps1
 artifacts:
-- path: PTIRelianceLib/build
-  name: /PTIRelianceLib/build/.*\.nupkg/
+- path: PTIRelianceLib/dist
+  name: /PTIRelianceLib/dist/.*\.nupkg/
 on_success:
   - git config --global core.autocrlf true
   - git config --global credential.helper store
