Fix build directory conflict
CI was using the same build directory and the nupkg source, this conflicts
with new build target setup. Switch CI to use dist instead.

--- a/.gitignore
+++ b/.gitignore
@@ -169,5 +169,6 @@ _Pvt_Extensions
 
 _site/
 nuget/
-/RelianceCLI/build/
+/RelianceCLI/dist/
 !/PTIRelianceLib/runtimes/**/*.dll
+/RelianceCLI/build/
