--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,8 +28,8 @@ build_script:
 test_script:
 - ps: .\tools\run_tests.ps1
 artifacts:
-- path: PTIRelianceLib/build
-  name: /PTIRelianceLib/build/.*\.nupkg/
+- path: PTIRelianceLib/dist
+  name: /PTIRelianceLib/dist/.*\.nupkg/
 on_success:
   - git config --global core.autocrlf true
   - git config --global credential.helper store
