--- a/.gitignore
+++ b/.gitignore
@@ -170,5 +170,6 @@ _Pvt_Extensions
 _site/
 nuget/
 /RelianceCLI/dist/
+!/PTIRelianceLib.Tests/Resources/*.bin
 !/PTIRelianceLib/runtimes/**/*.dll
 /RelianceCLI/build/
