Bug fix in targets file
Was accidentally copying the x64 version instead of the x86 version
to the output directory.
Create two new solutions folders for some of the random tools and files
in this project. Fix warning about operator precedence in targets file

Resolve issue #6

This resolves the docfx documentation metadata issue that broke online docs.

Only deploy docs if not on a PR check

Add net461 target for older versions of visual studio
VS 2013 does not acceptor netstandard2.0 as a valid target even with net 4.6.1 installed. Adding this tag to the nuget fixes the issue for these users.

Add IsDeviceReady property to ReliancePrinter
This property gives the client the ability to reliably check on the status of the low-level comms interface. Also, for the CLI force-copy the hidapi.dll to the output directory to make debugging easier.

--- a/PTIRelianceLib/PTIRelianceLib.csproj
+++ b/PTIRelianceLib/PTIRelianceLib.csproj
@@ -1,8 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <SemVer>1.1.0.0</SemVer>
+    <Suffix>-beta</Suffix>
+  </PropertyGroup>
+
+  <PropertyGroup>
 	<Title>PTI.Reliance.Tools</Title>
-    <TargetFrameworks>netstandard2.0;</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <Platforms>AnyCPU;x64;x86</Platforms>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Pyramid Technologies</Authors>
@@ -11,16 +16,16 @@
     <Copyright>2018 Pyramid Technologies</Copyright>
     <PackageLicenseUrl>https://pti.mit-license.org/</PackageLicenseUrl>
     <PackageReleaseNotes>Supports flash updating, configuration read, and configuration write</PackageReleaseNotes>
-    <Version>1.0.7-beta</Version>
+    <Version>$(SemVer)$(Suffix)</Version>
     <PackageProjectUrl>https://github.com/PyramidTechnologies/PTI.Reliance.Tools</PackageProjectUrl>
     <RepositoryUrl>https://github.com/PyramidTechnologies/PTI.Reliance.Tools</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>dotnet-core thermal-printer hid</PackageTags>
+    <PackageTags>dotnet-core thermal-printer hid netstandard2.0</PackageTags>
     <PackageIconUrl>https://pyramidacceptors.com/favicon.ico</PackageIconUrl>
-    <AssemblyVersion>1.0.7.0</AssemblyVersion>
+    <AssemblyVersion>$(SemVer)</AssemblyVersion>
 	  <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <FileVersion>1.0.7.0</FileVersion>
+    <FileVersion>$(SemVer)</FileVersion>
 	<IncludeSource>true</IncludeSource>
 	<IncludeSymbols>true</IncludeSymbols>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>   	
