--- a/PTIRelianceLib/PTIRelianceLib.csproj
+++ b/PTIRelianceLib/PTIRelianceLib.csproj
@@ -11,16 +11,16 @@
     <Copyright>2018 Pyramid Technologies</Copyright>
     <PackageLicenseUrl>https://pti.mit-license.org/</PackageLicenseUrl>
     <PackageReleaseNotes>Supports flash updating, configuration read, and configuration write</PackageReleaseNotes>
-    <Version>1.0.13-beta</Version>
+    <Version>1.1.0</Version>
     <PackageProjectUrl>https://github.com/PyramidTechnologies/PTI.Reliance.Tools</PackageProjectUrl>
     <RepositoryUrl>https://github.com/PyramidTechnologies/PTI.Reliance.Tools</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>dotnet-core thermal-printer hid</PackageTags>
+    <PackageTags>dotnet-core thermal-printer hid netstandard2.0</PackageTags>
     <PackageIconUrl>https://pyramidacceptors.com/favicon.ico</PackageIconUrl>
-    <AssemblyVersion>1.0.13.0</AssemblyVersion>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
 	  <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <FileVersion>1.0.13.0</FileVersion>
+    <FileVersion>1.1.0.0</FileVersion>
 	<IncludeSource>true</IncludeSource>
 	<IncludeSymbols>true</IncludeSymbols>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>   	
