--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,21 @@
 version: 1.0.{build}
+
 environment:
   access_token:
     secure: 4L8MS6vjIHzShfn4kfiesuBNu9Ojv6Vl4TtQFt0JZGaiMloLkHq86xzONq29mzkN
+
 pull_requests:
-  do_not_increment_build_number: true
+  do_not_increment_build_number: false
+
 image: Visual Studio 2017
+
+init:
+  - git config --global core.autocrlf true
+
+branches:
+  except:
+    - gh-pages
+
 before_build:
   - ps: |
         if(-Not $env:APPVEYOR_PULL_REQUEST_TITLE)
@@ -12,6 +23,7 @@ before_build:
             git checkout $env:APPVEYOR_REPO_BRANCH -q
             choco install docfx -y
         }
+
 dotnet_csproj:
   patch: true
   file: PTIRelianceLib\PTIRelianceLib.csproj
@@ -20,27 +32,23 @@ dotnet_csproj:
   assembly_version: '{version}'
   file_version: '{version}'
   informational_version: '{version}'
+
 nuget:
   account_feed: false
   project_feed: false
+
 build_script:
-- ps: .\tools\build_project.ps1
+  - ps: .\tools\build_project.ps1
+
 test_script:
-- ps: .\tools\run_tests.ps1
+  - ps: .\tools\run_tests.ps1
+
 artifacts:
-- path: '**\*.nupkg'
+  - path: **\*.nupkg
+
 on_success:
-  - ps: |
+  - ps: >-
         if(-Not $env:APPVEYOR_PULL_REQUEST_TITLE)
-        {   
-            git config --global core.autocrlf true
-            config --global credential.helper store
-            Add-Content "$HOME\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n"
-            git config --global user.name "Bert Bot"
-            git config --global user.email "bertbot@pyramidacceptors.com"
-            git clone https://github.com/PyramidTechnologies/PTI.Reliance.Tools.git -b gh-pages _site -q
-            docfx docsource\docfx.json
-            CD _site
-            git add -A
-            git diff-index --quiet HEAD || git commit -m "CI Updates" -q && git push origin gh-pages -q
+        {
+            .\tools\deploy_docs.ps1
         }
