--- a/PTIRelianceLib/PTIRelianceLib.csproj
+++ b/PTIRelianceLib/PTIRelianceLib.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <SemVer>1.1.0.0</SemVer>
+    <SemVer>1.1.1.0</SemVer>
     <Suffix>-beta</Suffix>
   </PropertyGroup>
 
@@ -20,7 +20,7 @@
     <PackageProjectUrl>https://github.com/PyramidTechnologies/PTI.Reliance.Tools</PackageProjectUrl>
     <RepositoryUrl>https://github.com/PyramidTechnologies/PTI.Reliance.Tools</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>dotnet-core thermal-printer hid netstandard2.0</PackageTags>
+    <PackageTags>pti usb thermal-printer hid netstandard2.0</PackageTags>
     <PackageIconUrl>https://pyramidacceptors.com/favicon.ico</PackageIconUrl>
     <AssemblyVersion>$(SemVer)</AssemblyVersion>
 	  <GenerateDocumentationFile>true</GenerateDocumentationFile>
