--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "homepages": [],
-  "source_base_path": "C:/projects/pti-reliance-tools/docsource",
+  "source_base_path": "F:/code/dotnet/PTIReliance/docsource",
   "xrefmap": "xrefmap.yml",
   "files": [
     {
@@ -13,15 +13,384 @@
       "is_incremental": false
     },
     {
-      "log_codes": [
-        "UidNotFound"
-      ],
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.BinaryFile.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.BinaryFile.html",
+          "hash": "SKOMx8ogeHKV0r+EyB3sJg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.DevNullMonitor.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.DevNullMonitor.html",
+          "hash": "0LMWQv49eiWf0nnySYTsfQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.FixedArray-1.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.FixedArray-1.html",
+          "hash": "916StlZHAxRTWBwRXs+l4w=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Flash.FlashEventMessageArgs.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Flash.FlashEventMessageArgs.html",
+          "hash": "JQroIOraQTLFe9R7vD5hAA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Flash.FlashProgressEventArgs.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Flash.FlashProgressEventArgs.html",
+          "hash": "0HX7ykSgdj3d21F9/qP65Q=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Flash.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Flash.html",
+          "hash": "Y285rM+G9DrB6HZMuqOvjw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.IPyramidDevice.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.IPyramidDevice.html",
+          "hash": "D7PYmkuboZ8+7VUGIkwQbA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Imaging.DitherAlgorithms.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Imaging.DitherAlgorithms.html",
+          "hash": "TQc4ya3qsedbxVIwrLUOwg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Imaging.LogoStorageConfig.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Imaging.LogoStorageConfig.html",
+          "hash": "tL/XOc6H1BPLRH/kAbhzDQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Imaging.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Imaging.html",
+          "hash": "TZdFpOBjkyrSahJR2eNUgw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Library.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Library.html",
+          "hash": "8HI8CXeIUxMQQ+/Y+1e6ug=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.LibraryOptions.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.LibraryOptions.html",
+          "hash": "CKzGRKIaEFZEhmA7DYF21g=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.PTIException.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.PTIException.html",
+          "hash": "vHpSnddrnTWaTUNqWc2UYA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.ProgressMonitor.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.ProgressMonitor.html",
+          "hash": "/Zez9RiAIb0QNmR6K0CfXg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Protocol.ErrorStatuses.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Protocol.ErrorStatuses.html",
+          "hash": "sfpXZIamzEUFr9ufjgDq2w=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Protocol.SensorStatuses.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Protocol.SensorStatuses.html",
+          "hash": "De/MZQPMWgskhX6WeUV4cA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Protocol.TicketStates.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Protocol.TicketStates.html",
+          "hash": "fOVvo5HedHw9q8kaOzaZ7w=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Protocol.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Protocol.html",
+          "hash": "+rPYRKrj8raVDSpvzOH+uA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.ReliancePrinter.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.ReliancePrinter.html",
+          "hash": "c/aDrwbrA21v9LQ6pVi7bQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.ReturnCodes.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.ReturnCodes.html",
+          "hash": "L7CMYxVmPPkzTnGlICgyBQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Revlev.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Revlev.html",
+          "hash": "ZFcGEaWQzgYyyQUjXjTurQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Status.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Status.html",
+          "hash": "DN/ZiRU27AEwKi7ayV5aBw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Telemetry.EjectionStatus.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Telemetry.EjectionStatus.html",
+          "hash": "LAk7spaGaE6suQRqWmGfkg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Telemetry.LastTicketState.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Telemetry.LastTicketState.html",
+          "hash": "MUb+5xb+PxXXhMDzsqRU5Q=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Telemetry.LifetimeTelemetry.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Telemetry.LifetimeTelemetry.html",
+          "hash": "q/HGAjK5jW5cuhQO1bDing=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Telemetry.PowerupTelemetry.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Telemetry.PowerupTelemetry.html",
+          "hash": "j9iFzqjNMaZBsXkQve4wmA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Telemetry.TicketLengthGroups.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Telemetry.TicketLengthGroups.html",
+          "hash": "KpUixnMzYghQwtJ6yrwnqA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Telemetry.TicketPullTimeGroups.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Telemetry.TicketPullTimeGroups.html",
+          "hash": "fx9JeYkYfPOwY48S8bJabw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.Telemetry.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.Telemetry.html",
+          "hash": "yn5mxWsB7rcwOXdqqJyo/g=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/PTIRelianceLib.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/PTIRelianceLib.html",
+          "hash": "pmxtiHf/6q6o8RPOr+H2Ig=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
       "type": "Conceptual",
       "source_relative_path": "api/index.md",
       "output": {
         ".html": {
           "relative_path": "api/index.html",
-          "hash": "6JE/+EmaxgV5eDcuOr0zTg=="
+          "hash": "7K2NZzfn9tW74xGpj4xTIw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Toc",
+      "source_relative_path": "api/toc.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/toc.html",
+          "hash": "MWNwB90gUrmaxz40GvW3HA=="
         }
       },
       "is_incremental": false,
@@ -50,15 +419,12 @@
       "version": ""
     },
     {
-      "log_codes": [
-        "UidNotFound"
-      ],
       "type": "Conceptual",
       "source_relative_path": "index.md",
       "output": {
         ".html": {
           "relative_path": "index.html",
-          "hash": "M/v4zdmn/+6nuxkacJdXzg=="
+          "hash": "WRRCwWIr3NnEYo8CCcfLRQ=="
         }
       },
       "is_incremental": false,
@@ -81,82 +447,67 @@
       "output": {
         ".html": {
           "relative_path": "toc.html",
-          "hash": "NNtRk4nOEWj6hzqRw5zzaQ=="
+          "hash": "7rsvqGOFJL+th5mfzE2gRQ=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
-      "log_codes": [
-        "UidNotFound"
-      ],
       "type": "Conceptual",
       "source_relative_path": "tutorials/configuration.md",
       "output": {
         ".html": {
           "relative_path": "tutorials/configuration.html",
-          "hash": "jSeAzxRJKQNB1gWX5mz3Lg=="
+          "hash": "51wZWEN61xOK+zWUCcO5xg=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
-      "log_codes": [
-        "UidNotFound"
-      ],
       "type": "Conceptual",
       "source_relative_path": "tutorials/customization.md",
       "output": {
         ".html": {
           "relative_path": "tutorials/customization.html",
-          "hash": "XVeWkNsbuQCJ8FpliyMhHw=="
+          "hash": "JlY5NUKGOeGaZkpnAVpm9w=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
-      "log_codes": [
-        "UidNotFound"
-      ],
       "type": "Conceptual",
       "source_relative_path": "tutorials/docker.md",
       "output": {
         ".html": {
           "relative_path": "tutorials/docker.html",
-          "hash": "ANBTGaHeZKNya1P2Ra8dng=="
+          "hash": "Q7cipVDtehRvsUzJUU8JMg=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
-      "log_codes": [
-        "UidNotFound"
-      ],
       "type": "Conceptual",
       "source_relative_path": "tutorials/exceptions.md",
       "output": {
         ".html": {
           "relative_path": "tutorials/exceptions.html",
-          "hash": "CMFImk5zDpYywM0L9BDnHg=="
+          "hash": "e3QwmBHooCoGOPtfRBzd4Q=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
-      "log_codes": [
-        "UidNotFound"
-      ],
       "type": "Conceptual",
       "source_relative_path": "tutorials/flash_update.md",
       "output": {
         ".html": {
           "relative_path": "tutorials/flash_update.html",
-          "hash": "A7Bb5F6ICLh9HQz2cZfzRg=="
+          "hash": "zmIK8OECCYfZGvnRCXBEeQ=="
         }
       },
       "is_incremental": false,
@@ -190,7 +541,7 @@
       "output": {
         ".html": {
           "relative_path": "tutorials/intro.html",
-          "hash": "utWJ5QDJxzgyV/Cn15np1g=="
+          "hash": "Fl127Q39S3F1ZljskZ/2Rg=="
         }
       },
       "is_incremental": false,
@@ -202,52 +553,43 @@
       "output": {
         ".html": {
           "relative_path": "tutorials/logging.html",
-          "hash": "7bYTzVKh8cwpMxH4Qj4bkA=="
+          "hash": "YGrzC+6tqk6b/LUHJZ+VVQ=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
-      "log_codes": [
-        "UidNotFound"
-      ],
       "type": "Conceptual",
       "source_relative_path": "tutorials/logos.md",
       "output": {
         ".html": {
           "relative_path": "tutorials/logos.html",
-          "hash": "9CrJPlN+Jkykt37TgoaDIA=="
+          "hash": "4ANWXC5pWEjMjS87rA1vaw=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
-      "log_codes": [
-        "UidNotFound"
-      ],
       "type": "Conceptual",
       "source_relative_path": "tutorials/status_check.md",
       "output": {
         ".html": {
           "relative_path": "tutorials/status_check.html",
-          "hash": "LAuhJlLT3OlM/+VOdxR5mg=="
+          "hash": "vR1Hh9nAuPrUxgeZUkUwcg=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
-      "log_codes": [
-        "UidNotFound"
-      ],
       "type": "Conceptual",
       "source_relative_path": "tutorials/telemetry.md",
       "output": {
         ".html": {
           "relative_path": "tutorials/telemetry.html",
-          "hash": "dxsH8H6+yrU5T+eEMzV+0g=="
+          "hash": "JS+31wemwdhVEv4ZOWWHjA=="
         }
       },
       "is_incremental": false,
@@ -259,7 +601,7 @@
       "output": {
         ".html": {
           "relative_path": "tutorials/toc.html",
-          "hash": "QJsB9rkB+C8Hqc71ZWsU0w=="
+          "hash": "J6wUiX3elJVfEvUneuUI6Q=="
         }
       },
       "is_incremental": false,
@@ -269,23 +611,26 @@
   "incremental_info": [
     {
       "status": {
-        "can_incremental": false,
-        "details": "Cannot build incrementally because last build info is missing.",
+        "can_incremental": true,
         "incrementalPhase": "build"
       },
       "processors": {
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
         "TocDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor TocDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
-        "ConceptualDocumentProcessor": {
-          "can_incremental": false,
+        "ManagedReferenceDocumentProcessor": {
+          "can_incremental": true,
           "incrementalPhase": "build"
         },
-        "ResourceDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+        "ConceptualDocumentProcessor": {
+          "can_incremental": true,
           "incrementalPhase": "build"
         }
       }
