--- a/PTIRelianceLib/PTIRelianceLib.csproj
+++ b/PTIRelianceLib/PTIRelianceLib.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <SemVer>1.1.2.0</SemVer>
+    <SemVer>1.2.0.0</SemVer>
     <Suffix></Suffix>
   </PropertyGroup>
 
@@ -43,8 +43,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="LibLog" Version="5.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="[9.0.1,12.12.0.1)" />
+    <PackageReference Include="LibLog" Version="5.0.3" />
     <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
   </ItemGroup>
 
