--- a/PTIRelianceLib/PTIRelianceLib.csproj
+++ b/PTIRelianceLib/PTIRelianceLib.csproj
@@ -7,7 +7,7 @@
 
   <PropertyGroup>
 	<Title>PTI.Reliance.Tools</Title>
-    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <TargetFrameworks>net461;netcoreapp3.1;netstandard2.0</TargetFrameworks>
     <Platforms>AnyCPU;x64;x86</Platforms>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Pyramid Technologies</Authors>
@@ -46,6 +46,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="[9.0.1,12.12.0.1)" />
     <PackageReference Include="LibLog" Version="5.0.3" />
     <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
+    <PackageReference Include="System.Drawing.Common" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0'">
