--- a/RelianceCLI/RelianceCLI.csproj
+++ b/RelianceCLI/RelianceCLI.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <Platforms>AnyCPU;x64</Platforms>
+    <Platforms>AnyCPU;x64;linux-arm</Platforms>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 	<AllowUnsafeBlocks>false</AllowUnsafeBlocks>
